--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
-    "cloudinary": "^2.0.0"
+    "cloudinary": "^2.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@floating-ui/react": "0.26.0",
