--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
     "eslint": "9.24.0",
