--- a/.github/workflows/prisma-db-push.yml
+++ b/.github/workflows/prisma-db-push.yml
@@ -16,10 +16,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: "npm"
 
       - name: Install deps
-        run: npm ci --legacy-peer-deps
+        run: npm install --legacy-peer-deps
 
       - name: Prisma generate
         env:
