--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@types/nodemailer": "^6.4.17",
     "@typescript-eslint/eslint-plugin": "7.0.0",
     "@typescript-eslint/parser": "7.0.0",
     "eslint": "9.24.0",
@@ -31,6 +32,8 @@
     "typescript": "5.2.2"
   },
   "dependencies": {
+    "nodemailer": "^6.9.16",
+    "cloudinary": "^2.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/s3-request-presigner": "^3.0.0",
     "@floating-ui/react": "0.26.0",
